<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <TextView
        android:id="@+id/main_text_view_name"
        android:layout_width="140dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/main_text_view_name"
        app:layout_constraintEnd_toStartOf="@+id/main_text_view_type"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_text_view_type"
        android:layout_width="106dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/main_text_view_type"
        app:layout_constraintEnd_toStartOf="@+id/main_text_view_date_time"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_text_view_date_time"
        android:layout_width="137dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/main_text_view_date_time"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/main_scroll_view"
        android:layout_width="378dp"
        android:layout_height="473dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/main_text_view_type">

        <TableLayout
            android:id="@+id/main_table_layout_show_appointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="0"
            android:stretchColumns="1">

            <TableRow
                android:id="@+id/main_table_row_appointment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical">

                <TextView
                    android:id="@+id/main_text_view_name_table"
                    android:layout_width="142dp"
                    android:layout_height="match_parent"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/main_text_view_type_table"
                    android:layout_width="93dp"
                    android:layout_height="match_parent"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/main_text_view_date_time_table"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/main_button_add_appointment"
        android:layout_width="186dp"
        android:layout_height="46dp"
        android:layout_marginTop="6dp"
        android:onClick="onAddAppointment"
        android:text="@string/main_button_add_appointment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/main_scroll_view"
        app:layout_constraintVertical_bias="0.138" />

</androidx.constraintlayout.widget.ConstraintLayout>